@@ -1,5 +1,7 @@
 0.06 Not Released
 
+ * Add test file t/release-test-version.t.
+
  * Add test file t/release-portability.t.
 
  * Format CHANGES according to CPAN::Changes::Spec. Add test file
